--- a/agriculture-front-end/src/index.css
+++ b/agriculture-front-end/src/index.css
@@ -12,7 +12,19 @@ code {
     monospace;
 }
 
-.google {
+
+.Home-Icon {
+  background-color: grey;
+  padding: 3px;
+  border-radius: 5px;
+}
+.home-flex {
+  width: 100%;
   height: 100%;
-  width: 60%;
+  display: flex;
+  flex-direction: row;
+  background-color: lightblue;
+}
+.list-group {
+  width: 30%;
 }
