--- a/agriculture-front-end/src/Box.css
+++ b/agriculture-front-end/src/Box.css
@@ -1,10 +1,25 @@
 .leftSidebar {
   
-    width: 50%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-direction: column;
-  }
-  .list-group {
+    align-items: center;
+}
+.list-group {
     text-align: center;
-  }
+    width:100%;
+}
+
+.submit {
+    padding: 0;
+    margin-top: 25%;
+    width: 50%;
+    height: 45px;
+    background-color: lightgreen;
+    border-color: darkgreen;
+    border-radius: 8px;
+}
+.submit:hover {
+    background-color: rgb(128, 227, 128);
+}
