--- a/agriculture-front-end/src/Box.css
+++ b/agriculture-front-end/src/Box.css
@@ -1,5 +1,4 @@
 .leftSidebar {
-  
     width: 40%;
     height: 100%;
     display: flex;
@@ -12,6 +11,7 @@
 }
 .fertilizer {
     margin-top: 20px;
+    color: white;
 }
 .form-select {
     margin-top: -5px;
@@ -22,6 +22,7 @@
     gap: 5px;
     font-size: 25px;
     font-weight:700;
+    color: white;
 }
 .test {
     margin-top: 5px;
@@ -53,4 +54,8 @@
 }
 .viewCrop:hover {
     background-color: rgb(128, 227, 128);
+}
+
+.CoordHolder {
+    color: white;
 }
