--- a/agriculture-front-end/src/crops.css
+++ b/agriculture-front-end/src/crops.css
@@ -17,6 +17,15 @@
     font-size: 20px;
     color:white;
     background-color: #363535;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.mainTitle {
+    margin-left: 33.6%;
+    font-weight: 600;
+    color:#1db050;
+    font-size: 45px;
 }
 .logo{
     height: 100px;
