--- a/agriculture-front-end/src/crops.css
+++ b/agriculture-front-end/src/crops.css
@@ -7,6 +7,8 @@
 .multiCropHolder {
     width: 99%;
     margin: 0% 0.5%;
+    margin-top: 2%;
+    padding-bottom: 10px;
     display: flex;
     align-items: top;
     justify-content: center;
@@ -17,6 +19,26 @@
     font-size: 20px;
     color:white;
     background-color: #363535;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.logo:hover {
+    cursor: pointer;
+}
+.mainTitle {
+    margin-left: 29.6%;
+    font-weight: 600;
+    color:#1db050;
+    font-size: 45px;
+}
+
+.homeLink {
+    margin-top: 17px;
+}
+.homeLink:hover {
+    color: lightgrey;
+    cursor: pointer;
 }
 .logo{
     height: 100px;
